--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
+    background-color: khaki;
 }
 
-h1 {
+h1, h2 {
     text-align: center;
 }
